--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,12 @@ display: flex;
 }
 
 .sideBar{
-  flex: 3;
+  flex: 2;
   border-right: 1px solid rgb(100, 100, 100);
 }
 
 .main{
-  flex: 9;
+  flex: 10;
 }
 
 .logo{
@@ -37,4 +37,50 @@ font-size: 2rem;
 }
 .upperSide{
   padding: 2.5rem;
+  border-bottom: 1px solid rgb(100, 100, 100);
+  height: 70%;
+}
+
+.logoSide{
+  display: flex;
+  align-items: center;
+  margin-bottom: 2.5rem;
+}
+
+.midButton{
+  background: #5A4BFF;
+  border: none;
+  color: white;
+  padding:1.5rem;
+  font-size: 1.5rem;
+  width: 25rem;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+  border-radius: 0.5rem;
+}
+
+.addButton{
+  height: 2rem;
+  padding-right: 1rem;
+}
+
+.query{
+  display: flex;
+  align-items: center;
+  background: transparent;
+  padding: 1.5rem;
+  width: 25rem;
+  margin: 1rem auto;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(98, 98, 98, 1);
+  color: rgba(222, 222, 222, 1);
+}
+
+.query>img{
+  margin-right: 2rem;
+  object-fit: cover;
+  height: 1.75rem;
 }
