--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,32 @@ font-size: 2rem;
   object-fit: cover;
   height: 1.75rem;
 }
+
+.lowerSide{
+  padding: 2rem;
+}
+
+.listItems{
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+  margin: 0.75rem;
+}
+
+.listItemsImg{
+  margin: 1rem;
+  padding-right: 1rem;
+
+}
+
+.listItems:nth-child(1)>.listItemsImg{
+
+  margin: 0.6rem;
+ 
+}
+
+.listItems:nth-child(3)>.listItemsImg{
+
+  margin: 0.7rem;
+ 
+}
